--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ES2024",
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "lib": ["ES2024"],
+    "lib": ["ES2024", "DOM"],
+    "types": [],
     "outDir": "./dist",
     "rootDir": ".",
     "strict": true,
